# meteobeguda-etl

./: LICENSE  README.md  etl.py  pyproject.toml
.github/workflows/: pr-checks.yml  shots.yml
data/lake/parsed/2022/05/: 2022-05-04.csv  2022-05-07.csv  2022-05-08.csv  2022-05-09.csv  2022-05-10.csv  2022-05-11.csv  2022-05-12.csv  2022-05-13.csv  2022-05-14.csv  2022-05-15.csv  2022-05-16.csv  2022-05-17.csv  2022-05-18.csv  2022-05-19.csv  2022-05-20.csv  2022-05-21.csv  2022-05-22.csv  2022-05-23.csv  2022-05-24.csv  2022-05-25.csv  2022-05-26.csv  2022-05-27.csv  2022-05-28.csv  2022-05-29.csv  2022-05-30.csv  2022-05-31.csv
data/lake/parsed/2022/06/: 2022-06-01.csv  2022-06-02.csv  2022-06-03.csv  2022-06-04.csv  2022-06-05.csv  2022-06-06.csv  2022-06-07.csv  2022-06-08.csv  2022-06-09.csv  2022-06-10.csv  2022-06-11.csv  2022-06-12.csv  2022-06-13.csv  2022-06-14.csv  2022-06-15.csv  2022-06-16.csv  2022-06-17.csv  2022-06-18.csv  2022-06-19.csv  2022-06-20.csv  2022-06-21.csv  2022-06-22.csv  2022-06-23.csv  2022-06-24.csv  2022-06-25.csv  2022-06-26.csv  2022-06-27.csv  2022-06-28.csv  2022-06-29.csv  2022-06-30.csv
data/lake/parsed/2022/07/: 2022-07-01.csv  2022-07-02.csv  2022-07-03.csv  2022-07-04.csv  2022-07-05.csv  2022-07-06.csv  2022-07-07.csv  2022-07-08.csv  2022-07-09.csv  2022-07-10.csv  2022-07-11.csv  2022-07-12.csv  2022-07-13.csv  2022-07-14.csv  2022-07-15.csv  2022-07-16.csv  2022-07-17.csv  2022-07-18.csv  2022-07-19.csv  2022-07-20.csv  2022-07-21.csv  2022-07-22.csv  2022-07-23.csv  2022-07-24.csv  2022-07-25.csv  2022-07-26.csv  2022-07-27.csv  2022-07-28.csv  2022-07-29.csv  2022-07-30.csv  2022-07-31.csv
data/lake/parsed/2022/08/: 2022-08-01.csv  2022-08-02.csv  2022-08-03.csv  2022-08-04.csv  2022-08-05.csv  2022-08-06.csv  2022-08-07.csv  2022-08-08.csv  2022-08-09.csv  2022-08-10.csv  (+21 more)
meteobeguda/: parser.py  sqlite.py  writer.py
sql/: create_aggregated_views.sql
src/meteobeguda_etl/: parser.py  request.py  sqlite.py
tests/: test_parser.py  test_request.py  test_sqlite.py  test_writer.py
tests/resources/: downld02.txt  downld02_with_nulls.txt  parsed_response.pkl  parsed_response_with_nulls.pkl  test_db.sqlite
(+2657 files in other folders)
