[tool.poetry]
name = "meteobeguda"
version = "0.1.0"
description = "Daily ETL and consolidation of data from meteobeguda.cat"
authors = ["Alberto Camara <camara@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
pandas = "^1.4.2"
typer = "^0.4.1"
dropbox = "^11.30.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
requests-mock = "^1.9.3"
types-requests = "^2.27.25"
mypy = "^0.950"
black = "^22.3.0"
flake8 = "^4.0.1"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
