[project]
name = "meteobeguda"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Alberto Camara", email = "camara@protonmail.com" }
]
dependencies = [
    "requests>=2.32.3",
    "pandas==1.4.2",
    "numpy==1.22.3",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "requests-mock>=1.12.1",
    "types-requests>=2.32.0.20240914",
    "mypy>=1.12.0",
    "black>=24.10.0",
    "flake8>=7.1.1",
    "bandit>=1.7.10",
    "pytest-randomly>=3.15.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["meteobeguda"]
