[project]
name = "meteobeguda-etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alberto Camara", email = "camara@protonmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "requests>=2.32.3",
]

[project.scripts]
meteobeguda-etl = "meteobeguda_etl:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "bandit>=1.8.3",
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-randomly>=3.16.0",
    "requests-mock>=1.12.1",
    "ruff>=0.9.7",
    "types-requests>=2.32.0.20241016",
]
